--- a/ex3/css/style3.css
+++ b/ex3/css/style3.css
@@ -3,9 +3,12 @@ body{
     padding: 0;
 }
 header {
-    background-color: yellow;
+    background-image: url(../imagens/project-1.png);
+    background-repeat: no-repeat;/*para não repetir a foto de fundo*/
+    background-size: cover;/*para pegar o fundo inteiro*/
+    background-position: center;
     width: 100%;
-    height: 500px;
+    height: 720px;
     padding-top: 15px;
 }
     nav {
@@ -30,8 +33,8 @@ header {
         padding: 0;
     }
     nav ul li{
-        color:aliceblue;
-        font-size: 18px;
+        color:white;
+        font-size: 20px;
         font-family: Montserrat, sans-serif;
         list-style:none;
     }
@@ -39,20 +42,38 @@ header {
         padding: 25px 20px 25px 0;
         float:left;
     }
-    nav menu_principal {
+    nav menu{
         float:right;
     } 
-    #menu_principal li span {
+    #menu li span {
         font-family: Montserrat,sans-serif;
         font-size: 11px;
-        color: rgb(134,134,134);
+        color: white;
         margin-right: 3px;
-        margin-top: 5px;
+        margin-top: 60px;
         float: left;
     }
-    #menu_principal li a{
+    #menu li a{
         color:white;
-        font-size: 14px;
+        font-size: 15px;
         text-transform: uppercase;
+        text-decoration: none;
+        transition: 1s;
+
     }
-    
+    #menu li a:hover{
+        color: rgb(255, 231, 19);
+        transition: 1s;
+        text-decoration: line-through;
+
+    }
+    section{
+        background-image: url(../imagens/divider-dark.png);
+        width: 100%;
+        height: 500px;
+        background-repeat: repeat-x;
+    }
+    /*-------------------------------------trabalhos-----------------------------------------*/
+    #trabalho {
+        background-color: blue;
+    }
